--- a/.extn/popup.html
+++ b/.extn/popup.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            width: 250px;
-            height: 250px;
+            width: 300px;
+            height: 300px;
             background-color: hsl(208, 91%, 68%);
             display: flex;
             justify-content: center;
+            align-items: center;
         }
         
-        p {
+        .joke-container {
+            text-align: center;
+        }
+        
+        #jokeElement{
             display: inner-flex;
             margin: auto 10px;
             font-size: 22px;
@@ -22,11 +29,21 @@
             border: 1px solid lightblue;
             padding: 10px;
         }
+
+        .refresh-button {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+        }
     </style>
     <title>Not Funny</title>
 </head>
 <body>
-    <p id="jokeElement">Loading...</p>
-    <script src="script.js"></script>
+    <div class="joke-container">
+        <p id="jokeElement">Loading...</p>
+        <button class="btn btn-primary refresh-button" id="refreshButton">New
+        </button>
+    </div>
+    <script src="popup.js"></script>
 </body>
 </html>
